fix partners gap

--- a/src/components/winter-2025/concept/concept.module.scss
+++ b/src/components/winter-2025/concept/concept.module.scss
@@ -33,6 +33,7 @@
   //
   //font-family: 'Fusing';
   img{
+    z-index: 1000;
     max-width: 100%;
     @include adaptiv-value('max-height',100,200);
     //height: 100%;
