--- a/src/components/winter-2025/partners/partnerItem.module.scss
+++ b/src/components/winter-2025/partners/partnerItem.module.scss
@@ -5,7 +5,7 @@
   @include fz(16, 75);
   text-align: center;
   font-weight: 400;
-  @include adaptiv-value('margin-bottom', 20, 60);
+  @include adaptiv-value('margin-bottom', 10, 30);
 }
 
 .grid {
