--- a/src/components/winter-2025/partners/partners.module.scss
+++ b/src/components/winter-2025/partners/partners.module.scss
@@ -1,7 +1,7 @@
 .wrapper{
     display: flex;
     flex-direction: column;
-    gap: 60px;
+    gap: 80px;
 
     //@media (max-width: 768px) {
     //    //background-image: url("./assets/winter/bg-new-mobile.webp");
